2006-08-10  Will Duquette <will@wjduquette.com>
	* snit.man: Added documentation for how to define new
	validation types.

2006-08-09  Will Duquette <will@wjduquette.com>
	* snit.man: Added documentation for the "-type" option-definition
	option, and for the validation types.  I still need to fill in a
	section on defining new validation types.
	* validate.tcl: Cleaned up the header comment.

2006-08-08  Will Duquette <will@wjduquette.com>
	* main1.tcl: Removed all "eq" and "ne" expressions, to reduce
	the differences between main1.tcl and main1_83.tcl.  Unlike
	main1_83.tcl, though, I used the forms {"" == $a} and 
	{"" != $a} in preferences to [string equal], as they are
	both shorter and more efficient.  I used [string equal]
	only when comparing two variables.  The next step is
	to update main1_83.tcl to use the {"" ==/!= $a} form 
	where possible, in preference to [string equal]; then,
	most of the code can be shared between the two modules,
	which will simplify maintenance.

2006-08-07  Will Duquette <will@wjduquette.com>
	* Implemented "-type" option-definition option in main2.tcl,
	for Snit 2.x, and main1_83.tcl for Snit 1.2 on Tcl 8.3.

2006-08-06  Will Duquette <will@wjduquette.com>
	* Major reorganization of the code modules.  snit.tcl and
	snit2.tcl are now just short loader scripts.  The Snit 1.x
	compiler and run-time library are implemented in main1.tcl and
	main1_83.tcl, respectively; the Snit 2.x compiler and run-time
	are in main2.tcl.  Both loaders load validate.tcl, which contains
	the new validation types.  This scheme is documented in
	modules.txt.

	* Bumped the Snit 1.x version number to Snit 1.2, since 
	Snit 1.1 has been a robust, stable release.

	* snit83.tcl: Removed; obsolete
	* snit84.tcl: Removed; obsolete

	* snit.tcl, main1_83.tcl: snit_tcl83_utils.tcl is now sourced in
	snit.tcl rather than main1_83.tcl.  I don't believe this should
	cause a problem....but it needs to be tested.
